--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
 
 
 {% block ext_js %}
-
+    <script type="text/javascript" src="{% static 'js/jquery.js' %}"></script>
 {% endblock %}
 
 </body>
