陈罗门[实现了管理员登出和非登录不允许访问]
Signed-off-by: cluom <c_l-m@qq.com>

--- a/templates/base_main.html
+++ b/templates/base_main.html
@@ -7,7 +7,7 @@
      <!--Logo区域开始-->
         <div id="header">
             <img src="{% static 'images/logo.png' %}" alt="logo" class="left"/>
-            <a href="#">[退出]</a>
+            <span>{{ user.admin_code }}</span><a href="{% url 'login:logout' %}">[退出]</a>
         </div>
         <!--Logo区域结束-->
         <!--导航区域开始-->
