--- a/static/css/global.css
+++ b/static/css/global.css
@@ -283,7 +283,7 @@ div.text_info
     width: 200px;
     text-align: right;
     float: left;
-    height: 40px;
+    height: 30px;
     margin-top: 5px;/*5*/
     /*border:1px solid black;*/
     margin-bottom:5px;
@@ -323,7 +323,6 @@ div.change_pwd
 {
     clear: both;
     width: 410px;
-    float: right;
 }
 div.change_pwd input, div.change_pwd label
 {
@@ -332,7 +331,7 @@ div.change_pwd input, div.change_pwd label
     line-height: 27px;
     float: left;
     margin-left: 5px;
-    border-width: 0px;
+    border-width: 0;
 }
 #optionalInfo
 {
