--- a/templates/NETCTOSS_Demo/main/account/account_add.html
+++ b/templates/NETCTOSS_Demo/main/account/account_add.html
@@ -2,6 +2,11 @@
 
 {% load static %}
 
+{% block css %}
+    {{ block.super }}
+    <link rel="stylesheet" href="{% static 'NETCTOSS_Demo/main/account/css/account_add.css' %}">
+{% endblock %}
+
 {% block content %}
     <!--主要区域开始-->
     <div id="main">
@@ -11,40 +16,48 @@
             <!--必填项-->
             <div class="text_info clearfix"><span>姓名：</span></div>
             <div class="input_info">
-                <input type="text" value="张三"/>
+                <input id="check_name" type="text"/>
                 <span class="required">*</span>
-                <div class="validate_msg_long">20长度以内的汉字、字母和数字的组合</div>
+                <span class="validate_msg_long">20长度以内的汉字、字母的组合</span>
             </div>
-            <div class="text_info clearfix"><span>身份证：</span></div>
+            <span id="name_info" class="warning"></span>
+            <div class="text_info clearfix">
+                <span>身份证：</span>
+            </div>
             <div class="input_info">
-                <input type="text" value="230198765432123456"/>
+                <input type="text" id="check_identity"/>
                 <span class="required">*</span>
-                <div class="validate_msg_long">正确的身份证号码格式</div>
+                <span class="validate_msg_long">正确的身份证号码格式</span>
             </div>
+            <span id="identity_info" class="warning"></span>
             <div class="text_info clearfix"><span>登录账号：</span></div>
             <div class="input_info">
-                <input type="text" value="创建即启用，状态为开通"/>
+                <input id="check_account" type="text"/>
                 <span class="required">*</span>
-                <div class="validate_msg_long">30长度以内的字母、数字和下划线的组合</div>
+                <span class="validate_msg_long">30长度以内的字母、数字和下划线的组合</span>
             </div>
+            <span id="account_info" class="warning"></span>
             <div class="text_info clearfix"><span>密码：</span></div>
             <div class="input_info">
-                <input type="password"/>
+                <input id="check_pwd" type="password"/>
                 <span class="required">*</span>
-                <div class="validate_msg_long">30长度以内的字母、数字和下划线的组合</div>
+                <span class="validate_msg_long">6到16位的字母、数字和下划线的组合</span>
             </div>
+            <span id="pwd_info" class="warning"></span>
             <div class="text_info clearfix"><span>重复密码：</span></div>
             <div class="input_info">
-                <input type="password"/>
+                <input id="confirm_pwd" type="password"/>
                 <span class="required">*</span>
-                <div class="validate_msg_long">两次密码必须相同</div>
+                <span class="validate_msg_long">两次密码必须相同</span>
             </div>
+            <span id="cpwd_info" class="warning"></span>
             <div class="text_info clearfix"><span>电话：</span></div>
             <div class="input_info">
-                <input type="text" class="width200"/>
+                <input id="check_tel" type="text" class="width200"/>
                 <span class="required">*</span>
-                <div class="validate_msg_medium">正确的电话号码格式：手机或固话</div>
+                <span class="validate_msg_medium">正确的电话号码格式：手机或固话</span>
             </div>
+            <span id="tel_info" class="warning"></span>
             <!--可选项-->
             <div class="text_info clearfix"><span>可选项：</span></div>
             <div class="input_info">
@@ -99,7 +112,7 @@
             </div>
             <!--操作按钮-->
             <div class="button_info clearfix">
-                <input type="button" value="保存" class="btn_save" onclick="showResult();"/>
+                <input type="button" value="保存" class="btn_save" onclick="add_user()"/>
                 <input type="button" value="取消" class="btn_save" onclick="location.href='/account/account_list'"/>
             </div>
         </form>
@@ -114,25 +127,14 @@
 {% endblock %}
 
 {% block ext_js %}
+    {{ block.super }}
+    <script type="text/javascript" src="{% static 'NETCTOSS_Demo/main/account/js/md5.js' %}"></script>
+    <script type="text/javascript" src="{% static 'NETCTOSS_Demo/main/account/js/account_add.js' %}"></script>
     <script language="javascript" type="text/javascript">
-        //保存成功的提示信息
-        function showResult() {
-            showResultDiv(true);
-            window.setTimeout("showResultDiv(false);", 3000);
-        }
-
-        function showResultDiv(flag) {
-            var divResult = document.getElementById("save_result_info");
-            if (flag)
-                divResult.style.display = "block";
-            else
-                divResult.style.display = "none";
-        }
-
         //显示选填的信息项
         function showOptionalInfo(imgObj) {
             var div = document.getElementById("optionalInfo");
-            if (div.className == "hide") {
+            if (div.className === "hide") {
                 div.className = "show";
                 imgObj.src = "{% static 'images/hide.png' %}";
             } else {
