--- a/templates/NETCTOSS_Demo/main/account/account_detail.html
+++ b/templates/NETCTOSS_Demo/main/account/account_detail.html
@@ -1,90 +1,51 @@
 ﻿{% extends 'base_main.html' %}
-
 {% load static %}
-
 {% block content %}
+    {{ block.super }}
+
     <!--主要区域开始-->
     <div id="main">
-        <form class="main_form">
+        <form action="" method="" class="main_form">
             <!--必填项-->
             <div class="text_info clearfix"><span>账务账号ID：</span></div>
-            <div class="input_info"><input type="text" value="{{ account.id }}" readonly class="readonly"/></div>
+            <div class="input_info"><input type="text" value="10" readonly class="readonly"/></div>
             <div class="text_info clearfix"><span>姓名：</span></div>
-            <div class="input_info"><input type="text" value="{{ account.real_name }}" readonly class="readonly"/></div>
+            <div class="input_info"><input type="text" value="张三" readonly class="readonly"/></div>
             <div class="text_info clearfix"><span>身份证：</span></div>
             <div class="input_info">
-                <input type="text" value="{{ account.idcard_no }}" readonly class="readonly"/>
+                <input type="text" value="230198765432123456" readonly class="readonly"/>
             </div>
             <div class="text_info clearfix"><span>登录账号：</span></div>
             <div class="input_info">
-                <input type="text" value="{{ account.login_name }}" readonly class="readonly"/>
+                <input type="text" value="user1" readonly class="readonly"/>
             </div>
             <div class="text_info clearfix"><span>电话：</span></div>
             <div class="input_info">
-                <input type="text" class="width200 readonly" readonly value="{{ account.telephone }}"/>
+                <input type="text" class="width200 readonly" readonly value="13687865435"/>
             </div>
             <div class="text_info clearfix"><span>推荐人账务账号ID：</span></div>
-            <div class="input_info"><input type="text" readonly class="readonly" value="{{ r_id }}"/></div>
+            <div class="input_info"><input type="text" readonly class="readonly" value="5"/></div>
             <div class="text_info clearfix"><span>推荐人身份证号码：</span></div>
-            <div class="input_info"><input type="text" readonly class="readonly" value="{{ r_idcard_no }}"/></div>
+            <div class="input_info"><input type="text" readonly class="readonly" value="230198765432123456"/></div>
             <div class="text_info clearfix"><span>状态：</span></div>
             <div class="input_info">
                 <select disabled>
-                    <option>
-                        {% if account.status == '0' %}
-                            删除
-                        {% elif account.status == '1' %}
-                            开通
-                        {% else %}
-                            暂停
-                        {% endif %}
-                    </option>
+                    <option>开通</option>
+                    <option>暂停</option>
+                    <option>删除</option>
                 </select>
             </div>
-            <div class="text_info clearfix"><span>开通时间：</span></div>
-            <div class="input_info"><input type="text" readonly class="readonly" value="{{ account.create_date }}"/>
-            </div>
-
-            <div class="text_info clearfix"><span>暂停时间：</span></div>
-            <div class="input_info">
-                {% if account.pause_date %}
-                    <input type="text" readonly class="readonly" value="{{ account.pause_date }}"/>
-                {% else %}
-                    <input type="text" readonly class="readonly" value=""/>
-                {% endif %}
-            </div>
-
-            <div class="text_info clearfix"><span>删除时间：</span></div>
-            <div class="input_info">
-                {% if account.close_date %}
-                    <input type="text" readonly class="readonly" value="{{ account.close_date }}"/>
-                {% else %}
-                    <input type="text" readonly class="readonly" value=""/>
-                {% endif %}
-            </div>
+            <div class="text_info clearfix"><span>开通/暂停/删除时间：</span></div>
+            <div class="input_info"><input type="text" readonly class="readonly" value="2013/01/21 12:00:00"/></div>
 
             <div class="text_info clearfix"><span>上次登录时间：</span></div>
-            <div class="input_info">
-                {% if account.last_login_time %}
-                    <input type="text" readonly class="readonly" value="{{ account.last_login_time }}"/>
-                {% else %}
-                    <input type="text" readonly class="readonly" value=""/>
-                {% endif %}
-            </div>
-
+            <div class="input_info"><input type="text" readonly class="readonly" value="2013/02/21 12:00:00"/></div>
             <div class="text_info clearfix"><span>上次登录IP：</span></div>
-            <div class="input_info">
-                {% if account.last_login_ip %}
-                    <input type="text" readonly class="readonly" value="{{ account.last_login_ip }}"/>
-                {% else %}
-                    <input type="text" readonly class="readonly" value=""/>
-                {% endif %}
-            </div>
-
+            <div class="input_info"><input type="text" readonly class="readonly" value="192.168.0.100"/></div>
             <!--可选项数据-->
             <div class="text_info clearfix"><span>生日：</span></div>
             <div class="input_info">
-                <input type="text" readonly class="readonly" value="{{ account.birthdate }}，由身份证计算而来"/>
+                <input type="text" readonly class="readonly" value="1980/01/21，由身份证计算而来"/>
             </div>
             <div class="text_info clearfix"><span>Email：</span></div>
             <div class="input_info">
@@ -93,61 +54,33 @@
             <div class="text_info clearfix"><span>职业：</span></div>
             <div class="input_info">
                 <select disabled>
-                    <option>
-                        {% if account.occupation is None %}
-                            其他
-                        {% else %}
-                            {{ account.occupation }}
-                        {% endif %}
-                    </option>
+                    <option>干部</option>
+                    <option>学生</option>
+                    <option>技术人员</option>
+                    <option>其他</option>
                 </select>
             </div>
-
             <div class="text_info clearfix"><span>性别：</span></div>
             <div class="input_info fee_type">
+                <input type="radio" name="radSex" checked="checked" id="female" disabled/>
+                <label for="female">女</label>
                 <input type="radio" name="radSex" id="male" disabled/>
                 <label for="male">男</label>
-                <input type="radio" name="radSex" id="female" disabled/>
-                <label for="female">女</label>
             </div>
-
             <div class="text_info clearfix"><span>通信地址：</span></div>
-            <div class="input_info">
-                {% if account.mailaddress %}
-                    <input type="text" class="width350 readonly" readonly value="{{ account.mailaddress }}"/>
-                {% else %}
-                    <input type="text" class="width350 readonly" readonly value=""/>
-                {% endif %}
+            <div class="input_info"><input type="text" class="width350 readonly" readonly value="北京市海淀区北三环中路甲18号中鼎大厦"/>
             </div>
-
             <div class="text_info clearfix"><span>邮编：</span></div>
-            <div class="input_info">
-                {% if account.zipcode %}
-                    <input type="text" class="readonly" readonly value="{{ account.zipcode }}"/>
-                {% else %}
-                    <input type="text" class="readonly" readonly value=""/>
-                {% endif %}
-            </div>
-
+            <div class="input_info"><input type="text" class="readonly" readonly value="100098"/></div>
             <div class="text_info clearfix"><span>QQ：</span></div>
-            <div class="input_info">
-                {% if account.qq %}
-                    <input type="text" class="readonly" readonly value="{{ account.qq }}"/>
-                {% else %}
-                    <input type="text" class="readonly" readonly value=""/>
-                {% endif %}
-            </div>
+            <div class="input_info"><input type="text" class="readonly" readonly value="12345678"/></div>
             <!--操作按钮-->
             <div class="button_info clearfix">
-                <input type="button" value="返回" class="btn_save"
-                       onclick="location.href='{% url 'account:account_list' %}';"/>
+                <input type="button" value="返回" class="btn_save" onclick="location.href='account_list.html';"/>
             </div>
         </form>
     </div>
     <!--主要区域结束-->
-{% endblock %}
-
-{% block footer %}
     <div id="footer">
 
     </div>
