陈罗门[实现了资费详细信息页面和资费添加页面]
Signed-off-by: cluom <c_l-m@qq.com>

--- a/templates/NETCTOSS_Demo/main/fee/fee_list.html
+++ b/templates/NETCTOSS_Demo/main/fee/fee_list.html
@@ -43,7 +43,7 @@
                 <input type="button" value="基费" class="sort_asc" onclick="sort(this, 1);"/>
                 <input type="button" value="时长" class="sort_asc" onclick="sort(this, 2);"/>
             </div>
-            <input type="button" value="增加" class="btn_add" onclick="location.href='fee_add.html';"/>
+            <input type="button" value="增加" class="btn_add" onclick="location.href='/fee/fee_add';"/>
         </div>
         <!--启用操作的操作提示-->
         <div id="save_result_info" class="save_success">
