--- a/templates/NETCTOSS_Demo/main/fee/fee_detail.html
+++ b/templates/NETCTOSS_Demo/main/fee/fee_detail.html
@@ -1,89 +1,91 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>NetCTOSS</title>
-        <link type="text/css" rel="stylesheet" media="all" href="../styles/global.css" />
-        <link type="text/css" rel="stylesheet" media="all" href="../styles/global_color.css" />       
-    </head>
-    <body>
-        <!--Logo区域开始-->
-        <div id="header">
-            <img src="../images/logo.png" alt="logo" class="left"/>
-            <a href="#">[退出]</a>            
+﻿<!doctype html>
+<html lang="en">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <title>NetCTOSS</title>
+    <link type="text/css" rel="stylesheet" media="all" href="/static/css/global.css"/>
+    <link type="text/css" rel="stylesheet" media="all" href="/static/css/global_color.css"/>
+    <script type="text/javascript" src="/static/js/jquery.js"></script>
+    <script type="text/javascript" src="/static/NETCTOSS_Demo/main/fee/js/fee.js"></script>
+    <script type="text/javascript" src="/static/NETCTOSS_Demo/main/fee/js/fee_detail.js"></script>
+</head>
+<body>
+<!--Logo区域开始-->
+<div id="header">
+    <img src="/static/images/logo.png" alt="logo" class="left"/>
+    <span>当前账号:<b></b></span>
+    <a href="/login/logout">[退出]</a>
+</div>
+<!--Logo区域结束-->
+<!--导航区域开始-->
+<div id="navi">
+    <ul id="menu">
+        <li><a href="/login/index/" class="index_off"></a></li>
+        <li><a href="../role/role_list.html" class="role_off"></a></li>
+        <li><a href="../admin/admin_list.html" class="admin_off"></a></li>
+        <li><a href="/fee/fee_list/" class="fee_on"></a></li>
+        <li><a href="../account/account_list.html" class="account_off"></a></li>
+        <li><a href="../service/service_list.html" class="service_off"></a></li>
+        <li><a href="../bill/bill_list.html" class="bill_off"></a></li>
+        <li><a href="../report/report_list.html" class="report_off"></a></li>
+        <li><a href="../user/user_info.html" class="information_off"></a></li>
+        <li><a href="../user/user_modi_pwd.html" class="password_off"></a></li>
+    </ul>
+</div>
+<!--导航区域结束-->
+<!--主要区域开始-->
+<div id="main">
+    <form action="" method="" class="main_form">
+        <div class="text_info clearfix"><span>资费ID：</span></div>
+        <div class="input_info"><input id="id" type="text" class="readonly" readonly value=""/></div>
+        <div class="text_info clearfix"><span>资费名称：</span></div>
+        <div class="input_info"><input id="name" type="text" class="readonly" readonly value=""/></div>
+        <div class="text_info clearfix"><span>资费状态：</span></div>
+        <div class="input_info">
+            <select class="readonly" disabled>
+                <option id="status"></option>
+            </select>
         </div>
-        <!--Logo区域结束-->
-        <!--导航区域开始-->
-        <div id="navi">
-            <ul id="menu">
-                <li><a href="../index.html" class="index_off"></a></li>
-                <li><a href="../role/role_list.html" class="role_off"></a></li>
-                <li><a href="../admin/admin_list.html" class="admin_off"></a></li>
-                <li><a href="../fee/fee_list.html" class="fee_on"></a></li>
-                <li><a href="../account/account_list.html" class="account_off"></a></li>
-                <li><a href="../service/service_list.html" class="service_off"></a></li>
-                <li><a href="../bill/bill_list.html" class="bill_off"></a></li>
-                <li><a href="../report/report_list.html" class="report_off"></a></li>
-                <li><a href="../user/user_info.html" class="information_off"></a></li>
-                <li><a href="../user/user_modi_pwd.html" class="password_off"></a></li>
-            </ul>
+        <div class="text_info clearfix"><span>资费类型：</span></div>
+        <div class="input_info fee_type">
+            <input type="radio" name="radFeeType" id="monthly" disabled="disabled"/>
+            <label for="monthly">包月</label>
+            <input type="radio" name="radFeeType" id="package" disabled="disabled"/>
+            <label for="package">套餐</label>
+            <input type="radio" name="radFeeType" id="timeBased" disabled="disabled"/>
+            <label for="timeBased">计时</label>
         </div>
-        <!--导航区域结束-->
-        <!--主要区域开始-->
-        <div id="main">            
-            <form action="" method="" class="main_form">
-                <div class="text_info clearfix"><span>资费ID：</span></div>
-                <div class="input_info"><input type="text" class="readonly" readonly value="1" /></div>
-                <div class="text_info clearfix"><span>资费名称：</span></div>
-                <div class="input_info"><input type="text" class="readonly" readonly value="包 20 小时"/></div>
-                <div class="text_info clearfix"><span>资费状态：</span></div>
-                <div class="input_info">
-                    <select class="readonly" disabled>
-                        <option>开通</option>
-                        <option>暂停</option>
-                        <option>删除</option>
-                    </select>                        
-                </div>
-                <div class="text_info clearfix"><span>资费类型：</span></div>
-                <div class="input_info fee_type">
-                    <input type="radio" name="radFeeType" id="monthly" disabled="disabled" />
-                    <label for="monthly">包月</label>
-                    <input type="radio" name="radFeeType" id="package" disabled="disabled" />
-                    <label for="package">套餐</label>
-                    <input type="radio" name="radFeeType" checked="checked" id="timeBased" disabled="disabled" />
-                    <label for="timeBased">计时</label>
-                </div>
-                <div class="text_info clearfix"><span>基本时长：</span></div>
-                <div class="input_info">
-                    <input type="text" class="readonly" readonly value="20"  />
-                    <span>小时</span>
-                </div>
-                <div class="text_info clearfix"><span>基本费用：</span></div>
-                <div class="input_info">
-                    <input type="text"  class="readonly" readonly value="24.5" />
-                    <span>元</span>
-                </div>
-                <div class="text_info clearfix"><span>单位费用：</span></div>
-                <div class="input_info">
-                    <input type="text"  class="readonly" readonly value="3.00" />
-                    <span>元/小时</span>
-                </div>
-                <div class="text_info clearfix"><span>创建时间：</span></div>
-                <div class="input_info"><input type="text"  class="readonly" readonly value="2013/1/1 00:00:00" /></div>      
-                <div class="text_info clearfix"><span>启动时间：</span></div>
-                <div class="input_info"><input type="text"  class="readonly" readonly value="2013/1/1 00:00:00" /></div>      
-                <div class="text_info clearfix"><span>资费说明：</span></div>
-                <div class="input_info_high">
-                    <textarea class="width300 height70 readonly" readonly>包 20 小时，20 小时以内 24.5 元，超出部分 3.00 元/小时</textarea>
-                </div>                    
-                <div class="button_info clearfix">
-                    <input type="button" value="返回" class="btn_save" onclick="location.href='fee_list.html';" />
-                </div>
-            </form>  
+        <div class="text_info clearfix"><span>基本时长：</span></div>
+        <div class="input_info">
+            <input id="base_duration" type="text" class="readonly" readonly value=""/>
+            <span>小时</span>
         </div>
-        <!--主要区域结束-->
-        <div id="footer">
-        
+        <div class="text_info clearfix"><span>基本费用：</span></div>
+        <div class="input_info">
+            <input id="base_cost" type="text" class="readonly" readonly value=""/>
+            <span>元</span>
         </div>
-    </body>
+        <div class="text_info clearfix"><span>单位费用：</span></div>
+        <div class="input_info">
+            <input id="unit_cost" type="text" class="readonly" readonly value=""/>
+            <span>元/小时</span>
+        </div>
+        <div class="text_info clearfix"><span>创建时间：</span></div>
+        <div class="input_info"><input id="creatime" type="text" class="readonly" readonly value=""/></div>
+        <div class="text_info clearfix"><span>启动时间：</span></div>
+        <div class="input_info"><input id="startime" type="text" class="readonly" readonly value=""/></div>
+        <div class="text_info clearfix"><span>资费说明：</span></div>
+        <div class="input_info_high">
+            <textarea id="descr" class="width300 height70 readonly" readonly></textarea>
+        </div>
+        <div class="button_info clearfix">
+            <input type="button" value="返回" class="btn_save" onclick="location.href='/fee/fee_list';"/>
+        </div>
+    </form>
+</div>
+<!--主要区域结束-->
+<div id="footer">
+
+</div>
+</body>
 </html>
