--- a/templates/NETCTOSS_Demo/main/account/account_list.html
+++ b/templates/NETCTOSS_Demo/main/account/account_list.html
@@ -43,7 +43,7 @@
                     </tr>
                     <tr>
                         <td>1</td>
-                        <td class="real_name">zhangsanfeng</td>
+                        <td class="real_name">习近平</td>
                         <td>230102197902137862</td>
                         <td>jiaqiang</td>
                         <td>开通</td>
