--- a/templates/NETCTOSS_Demo/main/account/account_detail.html
+++ b/templates/NETCTOSS_Demo/main/account/account_detail.html
@@ -84,7 +84,7 @@
             <!--可选项数据-->
             <div class="text_info clearfix"><span>生日：</span></div>
             <div class="input_info">
-                <input type="text" readonly class="readonly" value="{{ account.birthdate }}，由身份证计算而来"/>
+                <input type="text" readonly class="readonly" value="{{ account.birthdate }}"/>
             </div>
             <div class="text_info clearfix"><span>Email：</span></div>
             <div class="input_info">
