--- a/templates/NETCTOSS_Demo/main/account/account_modi.html
+++ b/templates/NETCTOSS_Demo/main/account/account_modi.html
@@ -11,27 +11,32 @@
     <!--主要区域开始-->
     <div id="main">
         <!--保存成功或者失败的提示消息-->
-        <div id="save_result_info" class="save_fail">保存失败，旧密码错误！</div>
+        <div id="save_result_info" class="save_fail">保存失败，你输入的信息有误！</div>
         <form action="" method="post" class="main_form">
             <!--必填项-->
             <div class="text_info clearfix"><span>账务账号ID：</span></div>
             <div class="input_info">
-                <input type="text" value="{{ account.id }}" readonly class="readonly"/>
+                <input id="account_id" type="text" value="{{ account.id }}" readonly class="readonly"/>
             </div>
+
             <div class="text_info clearfix"><span>姓名：</span></div>
             <div class="input_info">
-                <input type="text" value="{{ account.real_name }}"/>
+                <input id="check_name" type="text" value="{{ account.real_name }}"/>
                 <span class="required">*</span>
-                <span class="validate_msg_long error_msg">20长度以内的汉字、字母和数字的组合</span>
+                <span class="validate_msg_long error_msg">20长度以内的汉字和字母的组合（必填）</span>
             </div>
+            <span id="name_info"></span>
+
             <div class="text_info clearfix"><span>身份证：</span></div>
             <div class="input_info">
                 <input type="text" value="{{ account.idcard_no }}" readonly class="readonly"/>
             </div>
+
             <div class="text_info clearfix"><span>登录账号：</span></div>
             <div class="input_info">
                 <input type="text" value="{{ account.login_name }}" readonly class="readonly"/>
             </div>
+
             <div class="change_pwd">
                 <label for="chkModiPwd">修改密码：</label>
                 <input id="chkModiPwd" type="checkbox" onclick="showPwd(this);"/>
@@ -40,54 +45,76 @@
             <div id="divPwds">
                 <div class="text_info clearfix"><span>旧密码：</span></div>
                 <div class="input_info">
-                    <input type="password"/>
+                    <input id="check_old_pwd" type="password"/>
                     <span class="required">*</span>
-                    <span class="validate_msg_long">30长度以内的字母、数字和下划线的组合</span>
+                    <span class="validate_msg_long">原来的密码</span>
                 </div>
+                <span id="old_pwd_info"></span>
+
                 <div class="text_info clearfix"><span>新密码：</span></div>
                 <div class="input_info">
-                    <input type="password"/>
+                    <input id="check_new_pwd" type="password" disabled="disabled"/>
                     <span class="required">*</span>
-                    <span class="validate_msg_long">30长度以内的字母、数字和下划线的组合</span>
+                    <span class="validate_msg_long">6到16位的字母、数字和下划线的组合</span>
                 </div>
+                <span id="new_pwd_info"></span>
+
                 <div class="text_info clearfix"><span>重复新密码：</span></div>
                 <div class="input_info">
-                    <input type="password"/>
+                    <input id="confirm_pwd" type="password" disabled="disabled"/>
                     <span class="required">*</span>
                     <span class="validate_msg_long">两次密码必须相同</span>
                 </div>
+                <span id="c_pwd_info"></span>
             </div>
+
             <div class="text_info clearfix"><span>电话：</span></div>
             <div class="input_info">
-                <input type="text" class="width200"/>
+                <input id="check_tel" type="text" class="width200" value="{{ account.telephone }}"/>
                 <span class="required">*</span>
-                <span class="validate_msg_medium error_msg">正确的电话号码格式：手机或固话</span>
+                <span class="validate_msg_medium error_msg">正确的电话号码格式：手机或固话（必填）</span>
             </div>
+            <span id="tel_info"></span>
+
             <div class="text_info clearfix"><span>推荐人身份证号码：</span></div>
             <div class="input_info">
-                <input type="text"/>
+                {% if account.recommender_id is None %}
+                    <input id="check_r_identity" type="text"/>
+                {% else %}
+                    <input id="check_r_identity" type="text"/>
+                {% endif %}
                 <span class="required">*</span>
-                <span class="validate_msg_long error_msgs">正确的身份证号码格式</span>
+                <span class="validate_msg_long error_msgs">正确的身份证号码格式（可选项）</span>
             </div>
+            <span id="identity_info"></span>
+
             <div class="text_info clearfix"><span>生日：</span></div>
             <div class="input_info">
                 <input type="text" value="{{ account.birthdate }}" readonly class="readonly"/>
             </div>
+
             <div class="text_info clearfix"><span>Email：</span></div>
             <div class="input_info">
-                <input type="text" class="width200"/>
+                {% if account.email is None %}
+                    <input id="check_email" type="text" class="width200"/>
+                {% else %}
+                    <input id="check_email" type="text" class="width200" value="{{ account.email }}"/>
+                {% endif %}
                 <span class="required">*</span>
-                <span class="validate_msg_medium">50长度以内，合法的 Email 格式</span>
+                <span class="validate_msg_medium">50长度以内，合法的 Email 格式（可选项）</span>
             </div>
+            <span id="email_info"></span>
+
             <div class="text_info clearfix"><span>职业：</span></div>
             <div class="input_info">
                 <select>
+                    <option>其他</option>
                     <option>干部</option>
                     <option>学生</option>
                     <option>技术人员</option>
-                    <option>其他</option>
                 </select>
             </div>
+
             <div class="text_info clearfix"><span>性别：</span></div>
             <div class="input_info fee_type">
                 <input type="radio" name="radSex" id="male"/>
@@ -95,28 +122,47 @@
                 <input type="radio" name="radSex" id="female"/>
                 <label for="female">女</label>
             </div>
+
             <div class="text_info clearfix"><span>通信地址：</span></div>
             <div class="input_info">
-                <input type="text" class="width350"/>
+                {% if account.mailaddress is None %}
+                    <input id="check_mailaddress" type="text" class="width350"/>
+                {% else %}
+                    <input id="check_mailaddress" type="text" class="width350" value="{{ account.mailaddress }}"/>
+                {% endif %}
                 <span class="required">*</span>
-                <span class="validate_msg_tiny">50长度以内</span>
+                <span class="validate_msg_tiny">50长度以内（可选项）</span>
             </div>
+            <span id="mailaddress_info"></span>
+
             <div class="text_info clearfix"><span>邮编：</span></div>
             <div class="input_info">
-                <input type="text"/>
+                {% if account.zipcode is None %}
+                    <input id="check_zipcode" type="text"/>
+                {% else %}
+                    <input id="check_zipcode" type="text" value="{{ account.zipcode }}"/>
+                {% endif %}
                 <span class="required">*</span>
-                <span class="validate_msg_long">6位数字</span>
+                <span class="validate_msg_long">6位数字（可选项）</span>
             </div>
+            <span id="zipcode_info"></span>
+
             <div class="text_info clearfix"><span>QQ：</span></div>
             <div class="input_info">
-                <input type="text"/>
+                {% if account.qq is None %}
+                    <input id="check_qq" type="text"/>
+                {% else %}
+                    <input id="check_qq" type="text" value="{{ account.qq }}"/>
+                {% endif %}
                 <span class="required">*</span>
-                <span class="validate_msg_long">5到13位数字</span>
+                <span class="validate_msg_long">5到13位数字（可选项）</span>
             </div>
+            <span id="qq_info"></span>
+
             <!--操作按钮-->
             <div class="button_info clearfix">
                 <input type="button" value="保存" class="btn_save" onclick="showResult();"/>
-                <input type="button" value="取消" class="btn_save"/>
+                <input type="button" value="取消" class="btn_save" onclick="location.href='/account/account_list/'"/>
             </div>
         </form>
     </div>
@@ -130,21 +176,9 @@
 {% endblock %}
 
 {% block ext_js %}
+    {{ block.super }}
+    <script type="text/javascript" src="{% static 'NETCTOSS_Demo/main/account/js/account_modi.js' %}"></script>
     <script language="javascript" type="text/javascript">
-        //保存成功的提示信息
-        function showResult() {
-            showResultDiv(true);
-            window.setTimeout("showResultDiv(false);", 3000);
-        }
-
-        function showResultDiv(flag) {
-            var divResult = document.getElementById("save_result_info");
-            if (flag)
-                divResult.style.display = "block";
-            else
-                divResult.style.display = "none";
-        }
-
         //显示修改密码的信息项
         function showPwd(chkObj) {
             if (chkObj.checked)
