谢正东[归并zcz]

--- a/templates/NETCTOSS_Demo/main/account/account_list.html
+++ b/templates/NETCTOSS_Demo/main/account/account_list.html
@@ -11,26 +11,22 @@
         <form action="" method="">
             <!--查询-->
             <div class="search_add">
-                <div>身份证：<input type="text" name="idcard"  value="" class="text_search"/></div>
+                <div>身份证：<input type="text" name="idcard" value="" class="text_search"/></div>
                 <div>姓名：<input type="text" class="width70 text_search2" value=""/></div>
                 <div>登录名：<input type="text" value="" class="text_search3"/></div>
                 <div>
                     状态：
                     <select class="select_search">
                         <option>全部</option>
-                        <option >开通</option>
-                        <option >暂停</option>
-                        <option >删除</option>
+                        <option>开通</option>
+                        <option>暂停</option>
+                        <option>删除</option>
                     </select>
                 </div>
                 <div><input type="button" value="搜索" class="btn_search"/></div>
                 <input type="button" value="增加" class="btn_add" onclick="location.href='/account/account_add';"/>
             </div>
-            <!--删除等的操作提示-->
-            <div id="operate_result_info" class="operate_success">
-                <img src="{% static 'images/close.png' %}" onclick="this.parentNode.style.display='none';"/>
-                删除成功，且已删除其下属的业务账号！
-            </div>
+
             <!--数据区域：用表格展示数据-->
             <div id="data">
                 <table id="datalist">
@@ -55,7 +51,7 @@
                                 <td>开通</td>
                             {% elif account.status == '2' %}
                                 <td>暂停</td>
-                                {% elif account.status == '0' %}
+                            {% else %}
                                 <td>删除</td>
                             {% endif %}
 
@@ -66,21 +62,25 @@
                             {% else %}
                                 <td>{{ account.last_login_time }}</td>
                             {% endif %}
-                        {% if account.status == '0' %}
-                            <td class="td_modi" hidden>
-                                <input type="button" value="暂停" class="btn_pause" id1="{{ account.id }}"/>
-                                <input type="button" value="修改" class="btn_modify"
-                                       onclick="location.href='/account/account_modi'"/>
-                                <input type="button" value="删除" class="btn_delete" id="{{ account.id }}"/>
-                            </td>
-                        {% else %}
-                        <td class="td_modi" >
-                                <input type="button" value="暂停" class="btn_pause" id1="{{ account.id }}"/>
-                                <input type="button" value="修改" class="btn_modify"
-                                       onclick="location.href='/account/account_modi'"/>
-                                <input type="button" value="删除" class="btn_delete" id="{{ account.id }}"/>
-                            </td>
-                        {% endif %}
+                            {% if account.status == '0' %}
+                                <td class="td_modi" hidden>
+                                    <input type="button" value="暂停" class="btn_pause" id1="{{ account.id }}"/>
+                                    <input type="button" value="修改" class="btn_modify"
+                                           onclick="location.href='/account/account_modi'"/>
+                                    <input type="button" value="删除" class="btn_delete" id="{{ account.id }}"/>
+                                </td>
+                            {% else %}
+                                <td class="td_modi">
+                                    {% if account.status == '1' %}
+                                        <input type="button" value="暂停" class="btn_pause" id1="{{ account.id }}"/>
+                                    {% else %}
+                                        <input type="button" value="开通" class="btn_start" id1="{{ account.id }}"/>
+                                    {% endif %}
+                                    <input type="button" value="修改" class="btn_modify"
+                                           onclick="location.href='/account/account_modi'"/>
+                                    <input type="button" value="删除" class="btn_delete" id="{{ account.id }}"/>
+                                </td>
+                            {% endif %}
                         </tr>
                     {% endfor %}
                 </table>
@@ -121,7 +121,6 @@
     </div>
     <!--主要区域结束-->
     <div id="footer">
-
 
     </div>
 
