--- a/templates/NETCTOSS_Demo/main/account/account_modi.html
+++ b/templates/NETCTOSS_Demo/main/account/account_modi.html
@@ -161,7 +161,7 @@
 
             <!--操作按钮-->
             <div class="button_info clearfix">
-                <input type="button" value="保存" class="btn_save" onclick="showResult();"/>
+                <input type="button" value="保存" class="btn_save" onclick="save_modification();"/>
                 <input type="button" value="取消" class="btn_save" onclick="location.href='/account/account_list/'"/>
             </div>
         </form>
